.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
04:44:30 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
make: Nothing to be done for 'all'.
04:44:35 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
make: Nothing to be done for 'all'.
04:45:05 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:46:23 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
C:\Users\Andrei\Desktop\omnetpp-5.5.1-src-windows\omnetpp-5.5.1\tools\win64\mingw64\bin\ld: cannot open output file out/clang-release//CRFF_Project.exe: Permission denied
clang++.exe: error: unable to remove file: Permission denied
clang++.exe: error: linker command failed with exit code 1 (use -v to see invocation)
make: *** [Makefile:96: out/clang-release//CRFF_Project.exe] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
04:46:31 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Creating executable: out/clang-release//CRFF_Project.exe
04:47:31 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:48:51 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:49:16 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:49:56 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:50:39 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Host.cc:117:27: error: use of undeclared identifier 'srcX'
                    EV << srcX << " " << scrY << "\n";
                          ^
Host.cc:117:42: error: use of undeclared identifier 'scrY'
                    EV << srcX << " " << scrY << "\n";
                                         ^
2 errors generated.
make: *** [Makefile:105: out/clang-release//Host.o] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
04:50:52 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:52:05 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
make: Nothing to be done for 'all'.
04:52:28 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:52:50 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:54:52 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:55:12 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:57:38 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Host.cc:119:66: error: use of undeclared identifier 'srcY'; did you mean 'srcX'?
                    EV << x << " " << srcX << " " << y << " " << srcY << "\n";
                                                                 ^~~~
                                                                 srcX
Host.cc:117:28: note: 'srcX' declared here
                    double srcX = sourceModule->par("x").doubleValue();
                           ^
1 error generated.
make: *** [Makefile:105: out/clang-release//Host.o] Error 1
"make MODE=release all" terminated with exit code 2. Build might be incomplete.
04:57:49 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
04:58:25 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
05:03:12 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
make: Nothing to be done for 'all'.
05:07:50 **** Incremental Build of configuration release for project CRFF_Project ****
make MODE=release all 
Host.cc
Creating executable: out/clang-release//CRFF_Project.exe
